# camera_lidar_cail

./: CMakeLists.txt  Planes.txt  README.md  build.sh  clion.sh  docker_cali.sh  start.sh  start_muti.sh  start_plane.sh
conf/: Extrinsic.txt  NDTConfig.txt  Planes.txt
data/: 3D.txt  names.txt
launch/: start.launch  start_muti.launch  start_plane.launch  test.rviz
python/: README_sync.md  camera_lidar_sync.py  fill_names.py  lidar_image_sync.py  lidar_img_sync.py  ply_to_txt_converter.py  rename.py  rename_images.py  rename_lidar.py  set_intensity_30.py  txt_ply_converter.py
python/output/lidar_txt/: 20250829_182647_399958611.txt  20250829_182647_900057793.txt  20250829_182647_999954700.txt  20250829_182648_100061655.txt  20250829_182648_200107813.txt  20250829_182648_300052643.txt  20250829_182648_399997711.txt  20250829_182648_499976635.txt  20250829_182648_599966764.txt  20250829_182648_700297594.txt  20250829_182648_800386667.txt  20250829_182648_900156736.txt  20250829_182649_000177622.txt  20250829_182649_099959612.txt  20250829_182649_200060606.txt  20250829_182649_299952745.txt  20250829_182649_399997711.txt  20250829_182649_500102758.txt  20250829_182649_600033760.txt  20250829_182649_700111628.txt  20250829_182649_799954653.txt  20250829_182649_899992704.txt  20250829_182649_999954700.txt  20250829_182650_100141764.txt  20250829_182650_199950695.txt  20250829_182650_300005674.txt  (+280 more)
result/: Extrinsic.txt  Planes.txt
src/: Camera.h  FileIO.h  PCLlib.h  Util.h  main.cpp  main_calibration.cpp  main_muti.cpp  main_plane.cpp
src/data/: lidar_names.txt  names.txt
(+13 files in other folders)
